--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -109,7 +109,7 @@
         </div>
     <div class="container">
         <div class="logo">
-            <img src="{{ url_for('static', filename='up_2.jpg') }}" alt="Эмблема Used Parts">
+            <img src="{{ url_for('static', filename='UP_3.jpg') }}" alt="Эмблема Used Parts">
         </div>
 
         <div class="login-form">
