--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -214,7 +214,7 @@
         </div>
 
         <div class="logo">
-            <img src="{{ url_for('static', filename='up_2.jpg') }}" alt="Эмблемa Used Parts">
+            <img src="{{ url_for('static', filename='UP_3.jpg') }}" alt="Эмблемa Used Parts">
         </div>
 
         <div class="buttons-container">
